maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:91: error: not found: value yMax
    if (y+1<=yMax) {             //au sud,
             ^ShortestPathMaze:100: error: not found: value xMax
    if (x+1<=xMax) {             //ou à l'est.
             ^ShortestPathMaze:101: error: type mismatch;
 found   : Int
 required: Boolean
      (!aMurOuest(x+1, y) && getIndication(x+1, y)) match {
                                          ^